MODBULKOPS-304 - Tech Debt: enable check-style plugin (#495)
* MODBULKOPS-304 Checkstyle applied