@@ -29,7 +29,7 @@ import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
-
+import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -55,8 +55,6 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.ObjectUtils;
 
-import lombok.RequiredArgsConstructor;
-
 @Service
 @Log4j2
 @RequiredArgsConstructor
@@ -72,27 +70,30 @@ public class ErrorService {
   private final BulkOperationExecutionContentRepository executionContentRepository;
   private final MetadataProviderClient metadataProviderClient;
 
-  public void saveError(UUID bulkOperationId, String identifier,  String errorMessage, String uiErrorMessage, String link, ErrorType errorType) {
+  public void saveError(UUID bulkOperationId, String identifier, String errorMessage,
+                        String uiErrorMessage, String link, ErrorType errorType) {
     if (MSG_NO_CHANGE_REQUIRED.equals(errorMessage)
-      && executionContentRepository.findFirstByBulkOperationIdAndIdentifier(bulkOperationId, identifier).isPresent()) {
+            && executionContentRepository.findFirstByBulkOperationIdAndIdentifier(bulkOperationId,
+            identifier).isPresent()) {
       return;
     }
     executionContentRepository.save(BulkOperationExecutionContent.builder()
-      .identifier(identifier)
-      .bulkOperationId(bulkOperationId)
-      .state(StateType.FAILED)
-      .errorMessage(errorMessage)
-      .uiErrorMessage(uiErrorMessage)
-      .errorType(errorType)
-      .linkToFailedEntity(link)
-      .build());
+            .identifier(identifier)
+            .bulkOperationId(bulkOperationId)
+            .state(StateType.FAILED)
+            .errorMessage(errorMessage)
+            .uiErrorMessage(uiErrorMessage)
+            .errorType(errorType)
+            .linkToFailedEntity(link)
+            .build());
   }
 
   public void saveError(BulkOperationExecutionContent bulkOperationExecutionContent) {
     executionContentRepository.save(bulkOperationExecutionContent);
   }
 
-  public void saveError(UUID bulkOperationId, String identifier,  String errorMessage, ErrorType errorType) {
+  public void saveError(UUID bulkOperationId, String identifier,  String errorMessage,
+                        ErrorType errorType) {
     saveError(bulkOperationId, identifier, errorMessage, null, null, errorType);
   }
 
@@ -102,10 +103,16 @@ public class ErrorService {
     log.info("Errors deleted for bulk operation {}", bulkOperationId);
   }
 
-  public Errors getErrorsPreviewByBulkOperationId(UUID bulkOperationId, int limit, int offset, ErrorType errorType) {
+  public Errors getErrorsPreviewByBulkOperationId(UUID bulkOperationId, int limit, int offset,
+                                                  ErrorType errorType) {
     var bulkOperation = operationRepository.findById(bulkOperationId)
-      .orElseThrow(() -> new NotFoundException("BulkOperation was not found by id=" + bulkOperationId));
-    if (Set.of(DATA_MODIFICATION, REVIEW_CHANGES, REVIEWED_NO_MARC_RECORDS).contains(bulkOperation.getStatus()) || COMPLETED_WITH_ERRORS == bulkOperation.getStatus() && noCommittedErrors(bulkOperation) && noCommittedWarnings(bulkOperation)) {
+            .orElseThrow(() -> new NotFoundException("BulkOperation was not found by id="
+                    + bulkOperationId));
+    if (Set.of(DATA_MODIFICATION, REVIEW_CHANGES, REVIEWED_NO_MARC_RECORDS)
+            .contains(bulkOperation.getStatus())
+            || COMPLETED_WITH_ERRORS == bulkOperation.getStatus()
+            && noCommittedErrors(bulkOperation)
+            && noCommittedWarnings(bulkOperation)) {
       var pathToMatchedRecordsErrorsCsvFile = bulkOperation.getLinkToMatchedRecordsErrorsCsvFile();
       if (StringUtils.isEmpty(pathToMatchedRecordsErrorsCsvFile)) {
         return new Errors()
@@ -114,15 +121,17 @@ public class ErrorService {
       }
       ArrayList<Error> errors = new ArrayList<>();
       AtomicInteger counter = new AtomicInteger();
-      try (var reader = new BufferedReader(new InputStreamReader(remoteFileSystemClient.get(pathToMatchedRecordsErrorsCsvFile)))) {
+      try (var reader = new BufferedReader(new InputStreamReader(
+              remoteFileSystemClient.get(pathToMatchedRecordsErrorsCsvFile)))) {
         reader.lines().forEach(line -> {
           var message = line.split(Constants.COMMA_DELIMETER, 3);
           if (isNull(errorType) || Objects.equals(errorType.getValue(), message[IDX_ERROR_TYPE])) {
             counter.incrementAndGet();
             if (offset < counter.get() && errors.size() < limit) {
               errors.add(new Error().message(message[IDX_ERROR_MSG])
-                .parameters(List.of(new Parameter().key(IDENTIFIER).value(message[IDX_ERROR_IDENTIFIER])))
-                .type(ErrorType.fromValue(message[IDX_ERROR_TYPE])));
+                      .parameters(List.of(new Parameter().key(IDENTIFIER).value(
+                              message[IDX_ERROR_IDENTIFIER])))
+                      .type(ErrorType.fromValue(message[IDX_ERROR_TYPE])));
             }
           }
         });
@@ -131,7 +140,8 @@ public class ErrorService {
         throw new NotFoundException("Cannot process matching errors");
       }
       return new Errors().errors(errors).totalRecords(counter.get());
-    } else if (COMPLETED == bulkOperation.getStatus() || COMPLETED_WITH_ERRORS == bulkOperation.getStatus()) {
+    } else if (COMPLETED == bulkOperation.getStatus()
+            || COMPLETED_WITH_ERRORS == bulkOperation.getStatus()) {
       return getExecutionErrors(bulkOperationId, limit, offset, errorType);
     } else {
       throw new NotFoundException("Errors preview is not available");
@@ -140,9 +150,8 @@ public class ErrorService {
 
   public void saveErrorsFromDataImport(List<JobLogEntry> logEntries, BulkOperation bulkOperation) {
     log.info("Saving errors from DataImport, total entries = {}", logEntries.size());
-    logEntries.stream()
-      .filter(entry -> nonNull(entry.getError()))
-      .forEach(entry -> processDataImportErrorLogEntry(entry, bulkOperation));
+    logEntries.stream().filter(entry -> nonNull(entry.getError())).forEach(
+              entry -> processDataImportErrorLogEntry(entry, bulkOperation));
   }
 
   private void processDataImportErrorLogEntry(JobLogEntry errorEntry, BulkOperation bulkOperation) {
@@ -153,8 +162,10 @@ public class ErrorService {
     } else if (IdentifierType.INSTANCE_HRID.equals(bulkOperation.getIdentifierType())) {
       identifierList = relatedInstanceInfo.getHridList();
     }
-    var identifier = CollectionUtils.isEmpty(identifierList) ? null : identifierList.get(0);
-    if (errorEntry.getSourceRecordActionStatus() == JobLogEntry.ActionStatus.DISCARDED && errorEntry.getError().isEmpty()) {
+    var identifier = (identifierList == null || identifierList.isEmpty()) ? null
+            : identifierList.getFirst();
+    if (errorEntry.getSourceRecordActionStatus() == JobLogEntry.ActionStatus.DISCARDED
+            && errorEntry.getError().isEmpty()) {
       errorEntry.setError(DATA_IMPORT_ERROR_DISCARDED);
     }
     if (!errorEntry.getError().isEmpty()) {
@@ -170,16 +181,22 @@ public class ErrorService {
     return bulkOperation.getCommittedNumOfWarnings() == 0;
   }
 
-  public String getErrorsCsvByBulkOperationId(UUID bulkOperationId, int offset, ErrorType errorType) {
-    return getErrorsPreviewByBulkOperationId(bulkOperationId, Integer.MAX_VALUE, offset, errorType).getErrors().stream()
-      .map(error -> String.join(Constants.COMMA_DELIMETER, ObjectUtils.isEmpty(error.getParameters()) ? EMPTY : error.getType().getValue(), error.getParameters().get(0).getValue(), error.getMessage()))
+  public String getErrorsCsvByBulkOperationId(UUID bulkOperationId, int offset,
+                                              ErrorType errorType) {
+    return getErrorsPreviewByBulkOperationId(bulkOperationId, Integer.MAX_VALUE, offset, errorType)
+            .getErrors().stream()
+      .map(error -> String.join(Constants.COMMA_DELIMETER, ObjectUtils.isEmpty(
+              error.getParameters()) ? EMPTY : Objects.requireNonNull(error.getType()).getValue(),
+              error.getParameters().getFirst().getValue(), error.getMessage()))
       .collect(Collectors.joining(Constants.NEW_LINE_SEPARATOR));
   }
 
-  private Errors getExecutionErrors(UUID bulkOperationId, int limit, int offset, ErrorType errorType) {
-    int totalRecords = ofNullable(errorType)
-      .map(errType -> (int) executionContentRepository.countByBulkOperationIdAndErrorType(bulkOperationId, errType))
-      .orElseGet(() -> (int) executionContentRepository.countAllByBulkOperationIdAndErrorMessageIsNotNull(bulkOperationId));
+  private Errors getExecutionErrors(UUID bulkOperationId, int limit, int offset,
+                                    ErrorType errorType) {
+    int totalRecords = ofNullable(errorType).map(
+            errType -> (int) executionContentRepository.countByBulkOperationIdAndErrorType(
+                    bulkOperationId, errType)).orElseGet(() -> (int) executionContentRepository
+            .countAllByBulkOperationIdAndErrorMessageIsNotNull(bulkOperationId));
     if (limit == 0) {
       return new Errors()
         .errors(List.of())
@@ -187,23 +204,27 @@ public class ErrorService {
     }
     Page<BulkOperationExecutionContent> errorPage;
     if (isNull(errorType)) {
-      errorPage = executionContentRepository.findByBulkOperationIdAndErrorMessageIsNotNullOrderByErrorType(bulkOperationId, OffsetRequest.of(offset, limit));
+      errorPage = executionContentRepository
+              .findByBulkOperationIdAndErrorMessageIsNotNullOrderByErrorType(bulkOperationId,
+                      OffsetRequest.of(offset, limit));
     } else {
-      errorPage = executionContentRepository.findByBulkOperationIdAndErrorMessageIsNotNullAndErrorTypeIsOrderByErrorType(bulkOperationId, OffsetRequest.of(offset, limit), errorType);
+      errorPage = executionContentRepository
+              .findByBulkOperationIdAndErrorMessageIsNotNullAndErrorTypeIsOrderByErrorType(
+                      bulkOperationId, OffsetRequest.of(offset, limit), errorType);
     }
-    var errors = errorPage.toList().stream()
-      .map(this::executionContentToFolioError)
-      .toList();
+    var errors = errorPage.toList().stream().map(this::executionContentToFolioError).toList();
     return new Errors()
       .errors(errors)
       .totalRecords(totalRecords);
   }
 
   /**
-   * Convert BulkOperationExecutionContent to Error for preview on UI
+   * Convert BulkOperationExecutionContent to Error for preview on UI.
+   *
    * @param content {@link BulkOperationExecutionContent}
-   * @return {@link Error} with message equals to specific UI representation (uiErrorMessage) if it is not blank,
-   * otherwise - the same message as it is presented in csv file with errors (csvErrorMessage)
+   * @return {@link Error} with message equals to specific UI representation (uiErrorMessage)
+   *         if it is not blank, otherwise - the same message as it is presented in csv file
+   *         with errors (csvErrorMessage)
    */
   private Error executionContentToFolioError(BulkOperationExecutionContent content) {
 
@@ -214,18 +235,21 @@ public class ErrorService {
     }
 
     return new Error()
-      .message(StringUtils.isNotBlank(content.getUiErrorMessage()) ? content.getUiErrorMessage() : content.getErrorMessage())
+      .message(StringUtils.isNotBlank(content.getUiErrorMessage()) ? content.getUiErrorMessage()
+              : content.getErrorMessage())
       .parameters(parameters)
       .type(content.getErrorType());
   }
 
-  public String uploadErrorsToStorage(UUID bulkOperationId, String fileNamePrefix, String errorString) {
+  public String uploadErrorsToStorage(UUID bulkOperationId, String fileNamePrefix,
+                                      String errorString) {
     String errors;
     if (errorString != null) {
       errors = errorString;
     } else {
-      var contents = executionContentRepository.findByBulkOperationIdAndErrorMessageIsNotNullOrderByErrorType(
-        bulkOperationId, OffsetRequest.of(0, Integer.MAX_VALUE));
+      var contents = executionContentRepository
+              .findByBulkOperationIdAndErrorMessageIsNotNullOrderByErrorType(bulkOperationId,
+                      OffsetRequest.of(0, Integer.MAX_VALUE));
       if (contents.isEmpty()) {
         return null;
       }
@@ -237,16 +261,20 @@ public class ErrorService {
         .collect(Collectors.joining(LF));
     }
     var errorsFileName = LocalDate.now() + operationRepository.findById(bulkOperationId)
-      .map(BulkOperation::getLinkToTriggeringCsvFile)
-      .map(FilenameUtils::getName)
-      .map(fileName -> fileNamePrefix + fileName)
-      .orElse(ERROR_FILE_NAME_ENDING);
-    return remoteFileSystemClient.put(new ByteArrayInputStream(errors.getBytes()), bulkOperationId + "/" + errorsFileName);
+            .map(BulkOperation::getLinkToTriggeringCsvFile)
+            .map(FilenameUtils::getName)
+            .map(fileName -> fileNamePrefix + fileName)
+            .orElse(ERROR_FILE_NAME_ENDING);
+    return remoteFileSystemClient.put(new ByteArrayInputStream(errors.getBytes()),
+            bulkOperationId + "/" + errorsFileName);
   }
 
-  public void saveErrorsAfterQuery(List<BulkOperationExecutionContent> bulkOperationExecutionContents, BulkOperation operation) {
+  public void saveErrorsAfterQuery(
+          List<BulkOperationExecutionContent> bulkOperationExecutionContents,
+          BulkOperation operation) {
     StringBuilder sb = new StringBuilder();
-    bulkOperationExecutionContents.sort(Comparator.comparing(BulkOperationExecutionContent::getErrorType));
+    bulkOperationExecutionContents.sort(Comparator.comparing(
+            BulkOperationExecutionContent::getErrorType));
     bulkOperationExecutionContents.forEach(exCont -> {
       if (exCont.getErrorType() == ErrorType.ERROR) {
         operation.setMatchedNumOfErrors(operation.getMatchedNumOfErrors() + 1);
@@ -255,21 +283,27 @@ public class ErrorService {
         operation.setMatchedNumOfWarnings(operation.getMatchedNumOfWarnings() + 1);
       }
       var errorLine = "%s%s%s%s%s%s".formatted(exCont.getErrorType(), COMMA_DELIMETER,
-        StringUtils.strip(exCont.getIdentifier(), "\""), COMMA_DELIMETER, exCont.getErrorMessage(), System.lineSeparator());
+              StringUtils.strip(exCont.getIdentifier(), "\""), COMMA_DELIMETER,
+              exCont.getErrorMessage(), System.lineSeparator());
       sb.append(errorLine);
     });
     if (!sb.isEmpty()) {
-      var linkToMatchingErrorsFile = uploadErrorsToStorage(operation.getId(), ERROR_MATCHING_FILE_NAME_PREFIX, sb.toString());
+      var linkToMatchingErrorsFile = uploadErrorsToStorage(operation.getId(),
+              ERROR_MATCHING_FILE_NAME_PREFIX, sb.toString());
       operation.setLinkToMatchedRecordsErrorsCsvFile(linkToMatchingErrorsFile);
     }
   }
 
   public int getCommittedNumOfErrors(UUID bulkOperationId) {
-    return executionContentRepository.countAllByBulkOperationIdAndErrorMessageIsNotNullAndErrorTypeIs(bulkOperationId, ErrorType.ERROR);
+    return executionContentRepository
+            .countAllByBulkOperationIdAndErrorMessageIsNotNullAndErrorTypeIs(bulkOperationId,
+                    ErrorType.ERROR);
   }
 
   public int getCommittedNumOfWarnings(UUID bulkOperationId) {
-    return executionContentRepository.countAllByBulkOperationIdAndErrorMessageIsNotNullAndErrorTypeIs(bulkOperationId, ErrorType.WARNING);
+    return executionContentRepository
+            .countAllByBulkOperationIdAndErrorMessageIsNotNullAndErrorTypeIs(
+            bulkOperationId, ErrorType.WARNING);
   }
 
 }
