@@ -23,7 +23,6 @@ import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
-
 import org.assertj.core.api.Assertions;
 import org.folio.bulkops.client.SearchConsortium;
 import org.folio.bulkops.domain.bean.ConsortiumHolding;
@@ -82,19 +81,21 @@ class NoteTableUpdaterTest {
   @Test
   void shouldExtendTableWithItemNoteTypes() {
     var table = UnifiedTableHeaderBuilder.getEmptyTableWithHeaders(Item.class);
-    var row = Arrays.stream(new String[table.getHeader().size()]).collect(Collectors.toCollection(ArrayList::new));
-    row.set(ITEM_NOTE_POSITION, "Action note;Action note text;false;tenant;3e095251-4e9a-4484-8473-d5580abeccd0|Note;Note text;false;tenant;3e095251-4e9a-4484-8473-d5580abeccd0|Other;Other text;false;tenant;3e095251-4e9a-4484-8473-d5580abeccd0");
+    var row = Arrays.stream(new String[table.getHeader().size()])
+            .collect(Collectors.toCollection(ArrayList::new));
+    row.set(ITEM_NOTE_POSITION, "Action note;Action note text;false;tenant;"
+            + "3e095251-4e9a-4484-8473-d5580abeccd0|Note;Note text;false;tenant;"
+            + "3e095251-4e9a-4484-8473-d5580abeccd0|Other;Other text;false;tenant;"
+            + "3e095251-4e9a-4484-8473-d5580abeccd0");
     table.setRows(List.of(new Row().row(row)));
-
-    var expectedTableSize = table.getHeader().size() + 2;
 
     when(folioExecutionContext.getTenantId()).thenReturn("tenantId");
     when(consortiaService.isTenantCentral("tenantId")).thenReturn(false);
     when(itemReferenceService.getAllItemNoteTypes("tenantId"))
-      .thenReturn(List.of(NoteType.builder().name("Action note").build(),
+        .thenReturn(List.of(NoteType.builder().name("Action note").build(),
         NoteType.builder().name("Note").build(),
         NoteType.builder().name("Other").build()));
-
+    var expectedTableSize = table.getHeader().size() + 2;
     noteTableUpdater.extendTableWithItemNotesTypes(table, Set.of("Action note", "Other"), null);
 
     assertThat(table.getHeader(), hasSize(expectedTableSize));
@@ -107,7 +108,7 @@ class NoteTableUpdaterTest {
     assertFalse(table.getHeader().get(NOTE_POSITION).getForceVisible());
     assertTrue(table.getHeader().get(OTHER_POSITION).getForceVisible());
 
-    var modifiedRow = table.getRows().get(0).getRow();
+    var modifiedRow = table.getRows().getFirst().getRow();
     assertThat(modifiedRow, hasSize(expectedTableSize));
     assertEquals("Action note text", modifiedRow.get(ACTION_NOTE_POSITION));
     assertEquals("Note text", modifiedRow.get(NOTE_POSITION));
@@ -119,8 +120,12 @@ class NoteTableUpdaterTest {
     Map<String, Collection<String>> headers = new HashMap<>();
     headers.put("tenant", List.of("central"));
     var table = UnifiedTableHeaderBuilder.getEmptyTableWithHeaders(Item.class);
-    var row = Arrays.stream(new String[table.getHeader().size()]).collect(Collectors.toCollection(ArrayList::new));
-    row.set(ITEM_NOTE_POSITION, "Action note;Action note text;false;member;60b1f73e-bbf2-4807-806b-3166620a7aaa|Note;Note text;false;member;60b1f73e-bbf2-4807-806b-3166620a7aaa|Other;Other text;false;member;60b1f73e-bbf2-4807-806b-3166620a7aaa");
+    var row = Arrays.stream(new String[table.getHeader().size()])
+            .collect(Collectors.toCollection(ArrayList::new));
+    row.set(ITEM_NOTE_POSITION, "Action note;Action note text;false;member;"
+            + "60b1f73e-bbf2-4807-806b-3166620a7aaa|Note;Note text;false;member;"
+            + "60b1f73e-bbf2-4807-806b-3166620a7aaa|Other;Other text;false;member;"
+            + "60b1f73e-bbf2-4807-806b-3166620a7aaa");
     table.setRows(List.of(new Row().row(row)));
     row.set(0, UUID.randomUUID().toString());
     ConsortiumItemCollection consortiumItemCollection = new ConsortiumItemCollection();
@@ -129,21 +134,21 @@ class NoteTableUpdaterTest {
     consortiumItem.setTenantId("member");
     consortiumItemCollection.setItems(List.of(consortiumItem));
 
-    var expectedTableSize = table.getHeader().size() + 2;
-
     when(consortiaService.isTenantCentral("central")).thenReturn(true);
     when(folioExecutionContext.getTenantId()).thenReturn("central");
     when(folioExecutionContext.getOkapiHeaders()).thenReturn(headers);
     when(itemReferenceService.getAllItemNoteTypes("central")).thenReturn(List.of());
     when(itemReferenceService.getAllItemNoteTypes("member"))
-      .thenReturn(List.of(NoteType.builder().name("Action note").tenantId("member").build(),
+        .thenReturn(List.of(NoteType.builder().name("Action note").tenantId("member").build(),
         NoteType.builder().name("Note").tenantId("member").build(),
         NoteType.builder().name("Other").tenantId("member").build()));
     when(cacheManager.getCache("itemNoteTypes")).thenReturn(cache);
 
     var bulkOperation = new BulkOperation();
     bulkOperation.setUsedTenants(List.of("central", "member"));
-    noteTableUpdater.extendTableWithItemNotesTypes(table, Set.of("Action note", "Other"), bulkOperation);
+    var expectedTableSize = table.getHeader().size() + 2;
+    noteTableUpdater.extendTableWithItemNotesTypes(table, Set.of("Action note", "Other"),
+            bulkOperation);
 
     assertThat(table.getHeader(), hasSize(expectedTableSize));
     var headerNames = table.getHeader().stream().map(Cell::getValue).toList();
@@ -155,7 +160,7 @@ class NoteTableUpdaterTest {
     assertFalse(table.getHeader().get(NOTE_POSITION).getForceVisible());
     assertTrue(table.getHeader().get(OTHER_POSITION).getForceVisible());
 
-    var modifiedRow = table.getRows().get(0).getRow();
+    var modifiedRow = table.getRows().getFirst().getRow();
     assertThat(modifiedRow, hasSize(expectedTableSize));
     assertEquals("Action note text", modifiedRow.get(ACTION_NOTE_POSITION));
     assertEquals("Note text", modifiedRow.get(NOTE_POSITION));
@@ -165,18 +170,17 @@ class NoteTableUpdaterTest {
   @Test
   void shouldExtendTableWithEmptyItemsNotes() {
     var table = UnifiedTableHeaderBuilder.getEmptyTableWithHeaders(Item.class);
-    var row = Arrays.stream(new String[table.getHeader().size()]).collect(Collectors.toCollection(ArrayList::new));
+    var row = Arrays.stream(new String[table.getHeader().size()])
+            .collect(Collectors.toCollection(ArrayList::new));
     table.setRows(List.of(new Row().row(row)));
-
-    var expectedTableSize = table.getHeader().size() + 2;
 
     when(folioExecutionContext.getTenantId()).thenReturn("tenantId");
     when(consortiaService.isTenantCentral("tenantId")).thenReturn(false);
     when(itemReferenceService.getAllItemNoteTypes("tenantId"))
-      .thenReturn(List.of(NoteType.builder().name("Action note").build(),
+        .thenReturn(List.of(NoteType.builder().name("Action note").build(),
         NoteType.builder().name("Note").build(),
         NoteType.builder().name("Other").build()));
-
+    var expectedTableSize = table.getHeader().size() + 2;
     noteTableUpdater.extendTableWithItemNotesTypes(table, emptySet(), null);
 
     assertThat(table.getHeader(), hasSize(expectedTableSize));
@@ -185,7 +189,7 @@ class NoteTableUpdaterTest {
     assertThat(headerNames.indexOf("Note"), is(NOTE_POSITION));
     assertThat(headerNames.indexOf("Other"), is(OTHER_POSITION));
 
-    var modifiedRow = table.getRows().get(0).getRow();
+    var modifiedRow = table.getRows().getFirst().getRow();
     assertThat(modifiedRow, hasSize(expectedTableSize));
     assertNull(modifiedRow.get(ACTION_NOTE_POSITION));
     assertNull(modifiedRow.get(NOTE_POSITION));
@@ -195,19 +199,21 @@ class NoteTableUpdaterTest {
   @Test
   void shouldAddStaffOnlyPostfixWhenRequiredForItemNotes() {
     var table = UnifiedTableHeaderBuilder.getEmptyTableWithHeaders(Item.class);
-    var row = Arrays.stream(new String[table.getHeader().size()]).collect(Collectors.toCollection(ArrayList::new));
-    row.set(ITEM_NOTE_POSITION, "Action note;Action note text;true;tenantId;60b1f73e-bbf2-4807-806b-3166620a7aaa|Note;Note text;false;tenantId;60b1f73e-bbf2-4807-806b-3166620a7aaa|Other;Other text;true;tenantId;60b1f73e-bbf2-4807-806b-3166620a7aaa");
+    var row = Arrays.stream(new String[table.getHeader().size()])
+            .collect(Collectors.toCollection(ArrayList::new));
+    row.set(ITEM_NOTE_POSITION, "Action note;Action note text;true;tenantId;"
+            + "60b1f73e-bbf2-4807-806b-3166620a7aaa|Note;Note text;false;tenantId;"
+            + "60b1f73e-bbf2-4807-806b-3166620a7aaa|Other;Other text;true;tenantId;"
+            + "60b1f73e-bbf2-4807-806b-3166620a7aaa");
     table.setRows(List.of(new Row().row(row)));
-
-    var expectedTableSize = table.getHeader().size() + 2;
 
     when(folioExecutionContext.getTenantId()).thenReturn("tenantId");
     when(consortiaService.isTenantCentral("tenantId")).thenReturn(false);
     when(itemReferenceService.getAllItemNoteTypes("tenantId"))
-      .thenReturn(List.of(NoteType.builder().name("Action note").build(),
+        .thenReturn(List.of(NoteType.builder().name("Action note").build(),
         NoteType.builder().name("Note").build(),
         NoteType.builder().name("Other").build()));
-
+    var expectedTableSize = table.getHeader().size() + 2;
     noteTableUpdater.extendTableWithItemNotesTypes(table, emptySet(), null);
 
     assertThat(table.getHeader(), hasSize(expectedTableSize));
@@ -216,7 +222,7 @@ class NoteTableUpdaterTest {
     assertThat(headerNames.indexOf("Note"), is(NOTE_POSITION));
     assertThat(headerNames.indexOf("Other"), is(OTHER_POSITION));
 
-    var modifiedRow = table.getRows().get(0).getRow();
+    var modifiedRow = table.getRows().getFirst().getRow();
     assertThat(modifiedRow, hasSize(expectedTableSize));
     assertTrue(modifiedRow.get(ACTION_NOTE_POSITION).contains(STAFF_ONLY));
     assertFalse(modifiedRow.get(NOTE_POSITION).contains(STAFF_ONLY));
@@ -226,20 +232,23 @@ class NoteTableUpdaterTest {
   @Test
   void shouldExtendTableWithHoldingsNoteTypes() {
     var table = UnifiedTableHeaderBuilder.getEmptyTableWithHeaders(Item.class);
-    var row = Arrays.stream(new String[table.getHeader().size()]).collect(Collectors.toCollection(ArrayList::new));
-    row.set(HOLDINGS_NOTE_POSITION, "Action note;Action note text;false;tenant;60b1f73e-bbf2-4807-806b-3166620a7aaa|Note;Note text;false;tenant;60b1f73e-bbf2-4807-806b-3166620a7aaa|Other;Other text;false;tenant;60b1f73e-bbf2-4807-806b-3166620a7aaa");
+    var row = Arrays.stream(new String[table.getHeader().size()])
+            .collect(Collectors.toCollection(ArrayList::new));
+    row.set(HOLDINGS_NOTE_POSITION, "Action note;Action note text;false;tenant;"
+            + "60b1f73e-bbf2-4807-806b-3166620a7aaa|Note;Note text;false;tenant;"
+            + "60b1f73e-bbf2-4807-806b-3166620a7aaa|Other;Other text;false;tenant;"
+            + "60b1f73e-bbf2-4807-806b-3166620a7aaa");
     table.setRows(List.of(new Row().row(row)));
-
-    var expectedTableSize = table.getHeader().size() + 2;
 
     when(folioExecutionContext.getTenantId()).thenReturn("tenantId");
     when(consortiaService.isTenantCentral("tenantId")).thenReturn(false);
     when(holdingsReferenceService.getAllHoldingsNoteTypes("tenantId"))
-      .thenReturn(List.of(HoldingsNoteType.builder().name("Action note").build(),
+        .thenReturn(List.of(HoldingsNoteType.builder().name("Action note").build(),
         HoldingsNoteType.builder().name("Note").build(),
         HoldingsNoteType.builder().name("Other").build()));
-
-    noteTableUpdater.extendTableWithHoldingsNotesTypes(table, Set.of("Action note", "Other"), null);
+    var expectedTableSize = table.getHeader().size() + 2;
+    noteTableUpdater.extendTableWithHoldingsNotesTypes(table, Set.of("Action note", "Other"),
+            null);
 
     assertThat(table.getHeader(), hasSize(expectedTableSize));
     var headerNames = table.getHeader().stream().map(Cell::getValue).toList();
@@ -251,7 +260,7 @@ class NoteTableUpdaterTest {
     assertFalse(table.getHeader().get(NOTE_HOLDINGS_POSITION).getForceVisible());
     assertTrue(table.getHeader().get(OTHER_HOLDINGS_POSITION).getForceVisible());
 
-    var modifiedRow = table.getRows().get(0).getRow();
+    var modifiedRow = table.getRows().getFirst().getRow();
     assertThat(modifiedRow, hasSize(expectedTableSize));
     assertEquals("Action note text", modifiedRow.get(ACTION_HOLDINGS_NOTE_POSITION));
     assertEquals("Note text", modifiedRow.get(NOTE_HOLDINGS_POSITION));
@@ -263,9 +272,13 @@ class NoteTableUpdaterTest {
     Map<String, Collection<String>> headers = new HashMap<>();
     headers.put("tenant", List.of("central"));
     var table = UnifiedTableHeaderBuilder.getEmptyTableWithHeaders(Item.class);
-    var row = Arrays.stream(new String[table.getHeader().size()]).collect(Collectors.toCollection(ArrayList::new));
+    var row = Arrays.stream(new String[table.getHeader().size()])
+            .collect(Collectors.toCollection(ArrayList::new));
     row.set(0, UUID.randomUUID().toString());
-    row.set(HOLDINGS_NOTE_POSITION, "Action note;Action note text;false;member;3e095251-4e9a-4484-8473-d5580abeccd0|Note;Note text;false;member;3e095251-4e9a-4484-8473-d5580abeccd0|Other;Other text;false;member;3e095251-4e9a-4484-8473-d5580abeccd0");
+    row.set(HOLDINGS_NOTE_POSITION, "Action note;Action note text;false;member;"
+            + "3e095251-4e9a-4484-8473-d5580abeccd0|Note;Note text;false;"
+            + "member;3e095251-4e9a-4484-8473-d5580abeccd0|Other;Other text;"
+            + "false;member;3e095251-4e9a-4484-8473-d5580abeccd0");
     table.setRows(List.of(new Row().row(row)));
     ConsortiumHoldingCollection consortiumHoldingCollection = new ConsortiumHoldingCollection();
     ConsortiumHolding consortiumHolding = new ConsortiumHolding();
@@ -273,21 +286,21 @@ class NoteTableUpdaterTest {
     consortiumHolding.setTenantId("member");
     consortiumHoldingCollection.setHoldings(List.of(consortiumHolding));
 
-    var expectedTableSize = table.getHeader().size() + 2;
-
     when(consortiaService.isTenantCentral("central")).thenReturn(true);
     when(folioExecutionContext.getTenantId()).thenReturn("central");
     when(folioExecutionContext.getOkapiHeaders()).thenReturn(headers);
     when(holdingsReferenceService.getAllHoldingsNoteTypes("central")).thenReturn(List.of());
     when(holdingsReferenceService.getAllHoldingsNoteTypes("member"))
-      .thenReturn(List.of(HoldingsNoteType.builder().name("Action note").tenantId("member").build(),
+        .thenReturn(List.of(HoldingsNoteType.builder().name("Action note").tenantId("member")
+                        .build(),
         HoldingsNoteType.builder().name("Note").tenantId("member").build(),
         HoldingsNoteType.builder().name("Other").tenantId("member").build()));
     when(cacheManager.getCache("holdingsNoteTypes")).thenReturn(cache);
-
+    var expectedTableSize = table.getHeader().size() + 2;
     var bulkOperation = new BulkOperation();
     bulkOperation.setUsedTenants(List.of("central", "member"));
-    noteTableUpdater.extendTableWithHoldingsNotesTypes(table, Set.of("Action note", "Other"), bulkOperation);
+    noteTableUpdater.extendTableWithHoldingsNotesTypes(table, Set.of("Action note", "Other"),
+            bulkOperation);
 
     assertThat(table.getHeader(), hasSize(expectedTableSize));
     var headerNames = table.getHeader().stream().map(Cell::getValue).toList();
@@ -299,7 +312,7 @@ class NoteTableUpdaterTest {
     assertFalse(table.getHeader().get(NOTE_HOLDINGS_POSITION).getForceVisible());
     assertTrue(table.getHeader().get(OTHER_HOLDINGS_POSITION).getForceVisible());
 
-    var modifiedRow = table.getRows().get(0).getRow();
+    var modifiedRow = table.getRows().getFirst().getRow();
     assertThat(modifiedRow, hasSize(expectedTableSize));
     assertEquals("Action note text", modifiedRow.get(ACTION_HOLDINGS_NOTE_POSITION));
     assertEquals("Note text", modifiedRow.get(NOTE_HOLDINGS_POSITION));
@@ -309,18 +322,17 @@ class NoteTableUpdaterTest {
   @Test
   void shouldExtendTableWithEmptyHoldingsNotes() {
     var table = UnifiedTableHeaderBuilder.getEmptyTableWithHeaders(Item.class);
-    var row = Arrays.stream(new String[table.getHeader().size()]).collect(Collectors.toCollection(ArrayList::new));
+    var row = Arrays.stream(new String[table.getHeader().size()])
+            .collect(Collectors.toCollection(ArrayList::new));
     table.setRows(List.of(new Row().row(row)));
-
-    var expectedTableSize = table.getHeader().size() + 2;
 
     when(folioExecutionContext.getTenantId()).thenReturn("tenantId");
     when(consortiaService.isTenantCentral("tenantId")).thenReturn(false);
     when(holdingsReferenceService.getAllHoldingsNoteTypes("tenantId"))
-      .thenReturn(List.of(HoldingsNoteType.builder().name("Action note").build(),
+        .thenReturn(List.of(HoldingsNoteType.builder().name("Action note").build(),
         HoldingsNoteType.builder().name("Note").build(),
         HoldingsNoteType.builder().name("Other").build()));
-
+    var expectedTableSize = table.getHeader().size() + 2;
     noteTableUpdater.extendTableWithHoldingsNotesTypes(table, emptySet(), null);
 
     assertThat(table.getHeader(), hasSize(expectedTableSize));
@@ -329,7 +341,7 @@ class NoteTableUpdaterTest {
     assertThat(headerNames.indexOf("Note"), is(NOTE_HOLDINGS_POSITION));
     assertThat(headerNames.indexOf("Other"), is(OTHER_HOLDINGS_POSITION));
 
-    var modifiedRow = table.getRows().get(0).getRow();
+    var modifiedRow = table.getRows().getFirst().getRow();
     assertThat(modifiedRow, hasSize(expectedTableSize));
     assertNull(modifiedRow.get(ACTION_HOLDINGS_NOTE_POSITION));
     assertNull(modifiedRow.get(NOTE_HOLDINGS_POSITION));
@@ -339,19 +351,22 @@ class NoteTableUpdaterTest {
   @Test
   void shouldAddStaffOnlyPostfixWhenRequiredForHoldingsNotes() {
     var table = UnifiedTableHeaderBuilder.getEmptyTableWithHeaders(Item.class);
-    var row = Arrays.stream(new String[table.getHeader().size()]).collect(Collectors.toCollection(ArrayList::new));
-    row.set(HOLDINGS_NOTE_POSITION, "Action note;Action note text;true;tenantId;3e095251-4e9a-4484-8473-d5580abeccd0|Note;Note text;false;tenantId;3e095251-4e9a-4484-8473-d5580abeccd0|Other;Other text;true;tenantId;3e095251-4e9a-4484-8473-d5580abeccd0");
+    var row = Arrays.stream(new String[table.getHeader().size()])
+            .collect(Collectors.toCollection(ArrayList::new));
+    row.set(HOLDINGS_NOTE_POSITION, "Action note;Action note text;true;tenantId;"
+            + "3e095251-4e9a-4484-8473-d5580abeccd0|Note;Note text;false;tenantId;"
+            + "3e095251-4e9a-4484-8473-d5580abeccd0|Other;Other text;true;tenantId;"
+            + "3e095251-4e9a-4484-8473-d5580abeccd0");
     table.setRows(List.of(new Row().row(row)));
-
-    var expectedTableSize = table.getHeader().size() + 2;
 
     when(folioExecutionContext.getTenantId()).thenReturn("tenantId");
     when(consortiaService.isTenantCentral("tenantId")).thenReturn(false);
     when(holdingsReferenceService.getAllHoldingsNoteTypes("tenantId"))
-      .thenReturn(List.of(HoldingsNoteType.builder().name("Action note").tenantId("tenantId").build(),
+        .thenReturn(List.of(HoldingsNoteType.builder().name("Action note")
+                        .tenantId("tenantId").build(),
         HoldingsNoteType.builder().name("Note").tenantId("tenantId").build(),
         HoldingsNoteType.builder().name("Other").tenantId("tenantId").build()));
-
+    var expectedTableSize = table.getHeader().size() + 2;
     noteTableUpdater.extendTableWithHoldingsNotesTypes(table, emptySet(), new BulkOperation());
 
     assertThat(table.getHeader(), hasSize(expectedTableSize));
@@ -360,7 +375,7 @@ class NoteTableUpdaterTest {
     assertThat(headerNames.indexOf("Note"), is(NOTE_HOLDINGS_POSITION));
     assertThat(headerNames.indexOf("Other"), is(OTHER_HOLDINGS_POSITION));
 
-    var modifiedRow = table.getRows().get(0).getRow();
+    var modifiedRow = table.getRows().getFirst().getRow();
     assertThat(modifiedRow, hasSize(expectedTableSize));
     assertTrue(modifiedRow.get(ACTION_HOLDINGS_NOTE_POSITION).contains(STAFF_ONLY));
     assertFalse(modifiedRow.get(NOTE_HOLDINGS_POSITION).contains(STAFF_ONLY));
@@ -370,13 +385,14 @@ class NoteTableUpdaterTest {
   @Test
   void shouldAddNotePostfixWhenRequiredForHoldingsNoteTypeNames() {
     var table = UnifiedTableHeaderBuilder.getEmptyTableWithHeaders(HoldingsRecord.class);
-    var row = Arrays.stream(new String[table.getHeader().size()]).collect(Collectors.toCollection(ArrayList::new));
+    var row = Arrays.stream(new String[table.getHeader().size()])
+            .collect(Collectors.toCollection(ArrayList::new));
     table.setRows(List.of(new Row().row(row)));
 
     when(folioExecutionContext.getTenantId()).thenReturn("tenantId");
     when(consortiaService.isTenantCentral("tenantId")).thenReturn(false);
     when(holdingsReferenceService.getAllHoldingsNoteTypes("tenantId"))
-      .thenReturn(List.of(HoldingsNoteType.builder().name("Binding").build(),
+        .thenReturn(List.of(HoldingsNoteType.builder().name("Binding").build(),
         HoldingsNoteType.builder().name("Electronic bookplate").build(),
         HoldingsNoteType.builder().name("Provenance").build(),
         HoldingsNoteType.builder().name("Reproduction").build()));
@@ -385,19 +401,20 @@ class NoteTableUpdaterTest {
 
     var headerNames = table.getHeader().stream().map(Cell::getValue).toList();
     List.of("Binding", "Electronic bookplate", "Provenance", "Reproduction").forEach(name ->
-      assertTrue(headerNames.contains(name + " note")));
+        assertTrue(headerNames.contains(name + " note")));
   }
 
   @Test
   void shouldAddNotePostfixWhenRequiredForItemNoteTypeNames() {
     var table = UnifiedTableHeaderBuilder.getEmptyTableWithHeaders(Item.class);
-    var row = Arrays.stream(new String[table.getHeader().size()]).collect(Collectors.toCollection(ArrayList::new));
+    var row = Arrays.stream(new String[table.getHeader().size()])
+            .collect(Collectors.toCollection(ArrayList::new));
     table.setRows(List.of(new Row().row(row)));
 
     when(folioExecutionContext.getTenantId()).thenReturn("tenantId");
     when(consortiaService.isTenantCentral("tenantId")).thenReturn(false);
     when(itemReferenceService.getAllItemNoteTypes("tenantId"))
-      .thenReturn(List.of(NoteType.builder().name("Binding").build(),
+        .thenReturn(List.of(NoteType.builder().name("Binding").build(),
         NoteType.builder().name("Electronic bookplate").build(),
         NoteType.builder().name("Provenance").build(),
         NoteType.builder().name("Reproduction").build()));
@@ -406,15 +423,19 @@ class NoteTableUpdaterTest {
 
     var headerNames = table.getHeader().stream().map(Cell::getValue).toList();
     List.of("Binding", "Electronic bookplate", "Provenance", "Reproduction").forEach(name ->
-      assertTrue(headerNames.contains(name + " note")));
+        assertTrue(headerNames.contains(name + " note")));
   }
 
   @Test
   void shouldEnrichWithNotesByTypeIfNoteTypeHasSpecialCharacters() {
     var noteTypeWithEscapedSpecialCharacters = SpecialCharacterEscaper.escape("O|;:ther");
-    var row = new ArrayList<>(List.of("Note;Note text;false;tenant;6c8e4b97-4224-4155-8b13-07e29aca88ad|" + noteTypeWithEscapedSpecialCharacters + ";Other text;true;tenant;6c8e4b97-4224-4155-8b13-07e29aca88ad"));
+    var row = new ArrayList<>(List.of("Note;Note text;false;"
+            + "tenant;6c8e4b97-4224-4155-8b13-07e29aca88ad|"
+            + noteTypeWithEscapedSpecialCharacters
+            + ";Other text;true;tenant;6c8e4b97-4224-4155-8b13-07e29aca88ad"));
     var noteTypeNames = List.of("Note", "O|;:ther");
-    var enriched = noteTableUpdater.enrichWithNotesByType(row, 0, noteTypeNames, Collections.emptyList(), false);
+    var enriched = noteTableUpdater.enrichWithNotesByType(row, 0, noteTypeNames,
+            Collections.emptyList(), false);
     assertEquals(2, enriched.size());
     assertEquals("Other text (staff only)", enriched.get(1));
   }
@@ -422,17 +443,18 @@ class NoteTableUpdaterTest {
   @Test
   void shouldUpdateNoteTypeNamesWithTenants_whenNoteIdsAreDifferent() {
     List<NoteType> noteTypesFromUserTenants = List.of(
-      NoteType.builder().name("Binding").tenantId("memberA").id("id1").build(),
-      NoteType.builder().name("Binding").tenantId("memberB").id("id2").build());
+        NoteType.builder().name("Binding").tenantId("memberA").id("id1").build(),
+        NoteType.builder().name("Binding").tenantId("memberB").id("id2").build());
     noteTableUpdater.updateNoteTypeNamesWithTenants(noteTypesFromUserTenants);
-    noteTypesFromUserTenants.forEach(noteType -> assertEquals("Binding (" + noteType.getTenantId() + ")", noteType.getName()));
+    noteTypesFromUserTenants.forEach(noteType -> assertEquals("Binding ("
+            + noteType.getTenantId() + ")", noteType.getName()));
   }
 
   @Test
   void shouldNotUpdateNoteTypeNamesWithTenants_whenNoteIdsAreTheSame() {
     List<NoteType> noteTypesFromUserTenants = List.of(
-      NoteType.builder().name("Binding").tenantId("memberA").id("id1").build(),
-      NoteType.builder().name("Binding").tenantId("memberB").id("id1").build());
+        NoteType.builder().name("Binding").tenantId("memberA").id("id1").build(),
+        NoteType.builder().name("Binding").tenantId("memberB").id("id1").build());
     noteTableUpdater.updateNoteTypeNamesWithTenants(noteTypesFromUserTenants);
     noteTypesFromUserTenants.forEach(noteType -> assertEquals("Binding", noteType.getName()));
   }
@@ -440,15 +462,18 @@ class NoteTableUpdaterTest {
   @Test
   void shouldUpdateNoteTypeNamesWithTenants_whenThereAreNoteTypesInAllTenants() {
     List<NoteType> noteTypesFromUserTenants = List.of(
-      NoteType.builder().name("Binding").tenantId("memberA").id("id1").build(),
-      NoteType.builder().name("Binding").tenantId("memberB").id("id1").build(),
-      NoteType.builder().name("Binding2").tenantId("memberB").id("id2").build(),
-      NoteType.builder().name("Binding").tenantId("memberC").id("id1").build(),
-      NoteType.builder().name("Binding3").tenantId("memberC").id("id1").build()
+        NoteType.builder().name("Binding").tenantId("memberA").id("id1").build(),
+        NoteType.builder().name("Binding").tenantId("memberB").id("id1").build(),
+        NoteType.builder().name("Binding2").tenantId("memberB").id("id2").build(),
+        NoteType.builder().name("Binding").tenantId("memberC").id("id1").build(),
+        NoteType.builder().name("Binding3").tenantId("memberC").id("id1").build()
     );
     noteTableUpdater.updateNoteTypeNamesWithTenants(noteTypesFromUserTenants);
-    Assertions.assertThat(noteTypesFromUserTenants.stream().filter(note -> note.getName().equals("Binding")).count()).isEqualTo(3);
-    Assertions.assertThat(noteTypesFromUserTenants.stream().filter(note -> note.getName().equals("Binding2 (memberB)")).count()).isEqualTo(1);
-    Assertions.assertThat(noteTypesFromUserTenants.stream().filter(note -> note.getName().equals("Binding3 (memberC)")).count()).isEqualTo(1);
+    Assertions.assertThat(noteTypesFromUserTenants.stream()
+            .filter(note -> note.getName().equals("Binding")).count()).isEqualTo(3);
+    Assertions.assertThat(noteTypesFromUserTenants.stream()
+            .filter(note -> note.getName().equals("Binding2 (memberB)")).count()).isEqualTo(1);
+    Assertions.assertThat(noteTypesFromUserTenants.stream()
+            .filter(note -> note.getName().equals("Binding3 (memberC)")).count()).isEqualTo(1);
   }
 }
